# Homework

./: .gitignore
2/1/Task1/: Task1.pro  arraylist.cpp  arraylist.h  choice.cpp  choice.h  list.h  listpointer.cpp  listpointer.h  listtest.h  main.cpp
2/1/Task2/: Task2.pro  arraystack.cpp  arraystack.h  pointerstack.cpp  pointerstack.h  stack.cpp  stack.h  stackcalculator.cpp  stackcalculator.h  stackcalculatortest.h  stacktest.h
2/2/Task1/: Task1.pro  heapsorter.cpp  heapsorter.h  quicksorter.cpp  quicksorter.h  shellsorter.cpp  shellsorter.h  sorter.cpp  sorter.h  sortertest.h
2/2/Task2/: Task2.pro  main.cpp  showette.cpp  showette.h  showetteconsoleoutput.cpp  showetteconsoleoutput.h  showettefileoutput.cpp  showettefileoutput.h  showettetest.h  twodimensionalarray.cpp  twodimensionalarray.h
2/2/Task3/: Task3.pro  elementoflist.h  listpointer.h  listscomparator.cpp  listscomparator.h  main.cpp  sortedset.cpp  sortedset.h  sortedsettest.h
2/3/Task1/: Task1.pro  mainwindow.cpp  mainwindow.ui
2/3/Task2/: Task2.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
2/3/Task3/: Task3.pro  calculator.cpp  calculator.h  calculatortest.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
2/4/1/: Task1.pro  choice.cpp  choice.h  hashfaq6.cpp  hashfaq6.h  hashfunction.cpp  hashfunction.h  hashrot13.cpp  hashrot13.h  hashrs.cpp  hashrs.h  hashtable.cpp  hashtable.h  (+4 more)
2/7/: bag.h  bagtest.h  tree.h
2/Test2/: Test2.pro  bubblesort.h  bubblesorttest.h  comparator.h  comparatorforint.cpp  comparatorforint.h  main.cpp
3/Network/: Task1.pro  file.txt  main.cpp  networktest.h
3/TanksGame/: Algorithm.h  CMakeLists.txt  ClientNetworkManager.cpp  ClientNetworkManager.h  Command.cpp  Command.h  Entity.cpp  Entity.h  Explosion.cpp  Explosion.h  Game.cpp  Game.h  GameWorld.cpp  GameWorld.h  Gun.cpp  Gun.h  KeyboardGun.cpp  KeyboardGun.h  KeyboardTank.cpp  KeyboardTank.h  NetworkManager.cpp  NetworkManager.h  RemoteGun.cpp  RemoteGun.h  RemoteTank.cpp  RemoteTank.h  ServerNetworkManager.cpp  ServerNetworkManager.h  Shell.cpp  Shell.h  Tank.cpp  Tank.h  Terrain.cpp  Terrain.h  main.cpp
4/1/: Factorial.hs  Fibonacci.hs
4/2/: DigitsSum.hs  ListNumberPos.hs  Reverse.hs  ThreeListSum.hs  TwoDegree.hs
4/3/: Brackets.hs  Combination.hs  PointFree.hs  Search.hs
4/4/: EvenNumbers.hs  List.hs  Phonebook.hs  Tree.hs
4/5/: Task1.hs  Task2.hs  Task3.hs  Task4.hs
4/6/: Task6.1.hs  Task6.2.hs
4/Test/: Test3.hs  Test4.hs  Test5.hs  autoData.hs  randList.hs
(+86 files in other folders)
